fix(skills): border style and margin on mobile view :art:

--- a/src/containers/Content/Skills/skills.scss
+++ b/src/containers/Content/Skills/skills.scss
@@ -58,10 +58,13 @@
   .skills {
     margin: 1em 0;
     .skills-content {
+
+      margin: -3em 2em 2em 2em;
+
       header {
         flex-direction: column;
 
-        .front, .back, .ops, .soft-skills {
+        .front, .back, .ops {
           width: 100%;
           border: 1px solid #7510F7;
         }
@@ -74,6 +77,7 @@
         }
       }
       footer {
+        border: 1px solid #7510F7;
         img {
           width: 50%;
           align-self: center;
